# Evidentia

./: .dockerignore  .gitignore  AGENTS.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  auditors.py  claim_miner.py  markdown_understanding.py  meta_reviewer.py  orchestrator.py  question_answering.py  summarizer.py  utils.py
app/api/: envelope.py
app/api/routes/: health.py  jobs.py
app/core/: __init__.py  config.py  ids.py  llm.py  models.py  repository.py
app/indexing/: __init__.py  internal.py
app/parsing/: __init__.py  base.py  candidates.py  ensemble.py  factory.py  fusion.py  grobid.py  grobid_adapter.py  marker_adapter.py  mineru.py  paper_ir.py  pdffigures2_adapter.py  pymupdf_parser.py
app/reporting/: __init__.py
app/verification/: __init__.py
app/workers/: __init__.py
bruno/AI Reviewer Agent/: Health Check.bru  README.md  bruno.json
bruno/AI Reviewer Agent/Jobs/: Create Local Full Audit Job.bru  Get Trace.bru  (+8 more)
docker/: Dockerfile.app  Dockerfile.grobid  pdffigures2-wrapper.py
docs/: API.md  PARSING-DESIGN.md  PRD.md  SYSTEM-DESIGN.md  TECH-STACK.md  ai_reviewer_agent_system_design_v_0_1.md  roadmap.md  研究报告.md
docs/spec/: README.md  agent-contracts.md  api.md  architecture.md  coding-standards.md  data-model.md  evidence-and-gates.md  operations.md  privacy-security.md  prompt-guidelines.md  testing.md
scripts/: download_marker_models_aria2.sh  preload_marker_models.py
tests/: conftest.py  test_agents.py  test_api.py  test_indexing.py  test_models.py  test_parser.py  test_parser_ensemble.py
(+2 files in other folders)
